Fix: correction sort restaurants